# Grupo-10-Stayhub

./: .env.example  .gitignore  README.md  actividades.md  docker-compose.yml
backend/: Dockerfile  README.md  guia-uv.md  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: __init__.py  propiedad.py  reserva.py  reseña.py  usuario.py
backend/app/routers/: __init__.py  propiedades.py  reservas.py  usuarios.py
backend/app/schemas/: __init__.py  propiedad.py  reserva.py  usuario.py
backend/backups/: backup_db.py  restore_db.py
frontend/: README.md  app.js  index.html  styles.css
